fix singout button mobile

--- a/src/scss/modules/dashboard/dashboard-budget.scss
+++ b/src/scss/modules/dashboard/dashboard-budget.scss
@@ -98,6 +98,9 @@
 
 .calendar {
     position: absolute;
-    left: 0;
     top: 48px;
+
+    @media (min-width: $tablet-width) {
+        left: 0;
+    }
 }
