--- a/src/scss/modules/navbar/language-selector.scss
+++ b/src/scss/modules/navbar/language-selector.scss
@@ -1,7 +1,7 @@
 .languages {
   //height: 100%;
   position: relative;
-  width: 246px; // TO DO REMOVE
+  width: 200px;
   cursor: pointer;
 
   &:hover {
